<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">US Election App</string>
    <string name="upcoming_election">Upcoming Elections</string>
    <string name="saved_election">Saved Elections</string>
    <string name="btn_upcoming_election">Upcoming Elections</string>
    <string name="btn_representatives">Representatives</string>
    <string name="representative_search">Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="search_my_presentatives">Search</string>
    <string name="my_location">My Location</string>
    <string name="my_representatives_title">My Representative</string>
    <string name="ballot_information">Ballot Info</string>
    <string name="election_info">Election Information: %s</string>
    <string name="follow_election_text">Follow Election</string>
    <string name="unfollow_election_text">Unfollow Election</string>
    <string name="no_network_message">Network is not available!</string>
    <string name="location_required_err_msg">Location service is required!</string>
    <string name="no_location_permission_msg">Location permission is not granted!</string>
    <string name="no_any_browser_msg">No browser available!</string>
    <string name="voting_location">Voting Location</string>
</resources>
