<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.election.representative.RepresentativesViewModel" />
    </data>
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/represent_fragment_scene">
        <TextView
            android:id="@+id/tv_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edittext_address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1"
            android:autofillHints="@string/address_line_1"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_title" />
        <EditText
            android:id="@+id/edittext_address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_2"
            android:autofillHints="@string/address_line_2"
            android:text="@={viewModel.address.line2}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_address_line_1" />
        <EditText
            android:id="@+id/edittext_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city"
            android:ems="10"
            android:hint="@string/city"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@={viewModel.address.city}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_address_line_2" />
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@{viewModel.states}"
            android:selectedItemPosition="@={viewModel.selectedStateIndex}"
            app:layout_constraintBottom_toBottomOf="@id/edittext_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/edittext_city"
            app:layout_constraintTop_toTopOf="@id/edittext_city" />
        <EditText
            android:id="@+id/edditext_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/zip"
            android:ems="10"
            android:hint="@string/zip"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_city" />
        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/search_my_presentatives"
            app:layout_constraintTop_toBottomOf="@id/edditext_zip" />
        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/my_location"
            app:layout_constraintTop_toBottomOf="@id/btn_search" />
        <TextView
            android:id="@+id/tv_representatives_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:text="@string/my_representatives_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_location" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_representatives"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/small_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_representatives_title"
            tools:itemCount="4"
            tools:listitem="@layout/representative_item">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>